python-defaults (2.6.6-14) UNRELEASED; urgency=low

  * python.mk: add py_builddir macro.
    $(call py_builddir, 2.6) returns "build/lib.linux-x86_64-2.6" on amd64
  * dh_python2, pycompile, pyclean: add "namespace" feature:
    dh_python2 parses Egg's namespace_packages.txt files (in addition to
    --namespace command line argument(s)) and drops empty __init__.py files
    from binary package. pycompile will regenerates them at install time and
    pyclean will remove them at uninstall time (if they're no longer used in
    installed packages
  * Remove myself from Uploaders

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 27 Mar 2011 16:29:05 +0200

python-defaults (2.6.6-13) experimental; urgency=low

  * Add python2.7 as a supported Python version.
  * python-all{,-dev,-dbg}: Depend on the 2.7 packages.
  * Run the rtinstall script, when 2.7 became a supported version (2.6.6-13)
    and python2.7 is installed.
  * Python-minimal Breaks python-support (<< 1.0.12)

 -- Scott Kitterman <scott@kitterman.com>  Mon, 21 Mar 2011 10:53:42 -0400

python-defaults (2.6.6-12) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - use Depends: python (<< 2.X), python (>= 2.Y) rather than Breaks
      in packages with public modules (after a discussion on debian-devel
      mailing list)
    - do not try to check dangling symlinks's shebang (closes: 619005)

  [ Scott Kitterman ]
  * Start Python Policy updates for Wheezy:
    - Document current practice to not provide /usr/bin/python2
    - Strengthen warning aginst using /usr/bin/env python     
    - Update paths section for python2.7 and python3
    - Deprecate XB-Python-Version
    - Clarify use of {python:Provides}
    - Clarify that build-dependencies on -dev packages should not be used
      except when required
  * Upload to unstable:
    - Drop python2.7 from supported versions, not ready for Python transition
      yet

 -- Scott Kitterman <scott@kitterman.com>  Mon, 21 Mar 2011 10:22:06 -0400
