@@ -110,9 +110,9 @@ Description: debug build of the Python Interpreter (version @VER@)
 
 Package: python-all
 Architecture: all
-Depends: ${misc:Depends}, python (= ${binary:Version}), python2.5 (>= 2.5.5-6), python2.6 (>= 2.6.5-2), python2.7 (>= 2.7-7)
+Depends: ${misc:Depends}, python (= ${binary:Version}), python2.6 (>= 2.6.5-2), python2.7 (>= 2.7-7)
 Description: package depending on all supported Python runtime versions
- The package currently depends on python2.5, python2.6 and python2.7, in the future,
+ The package currently depends on python2.6 and python2.7, in the future,
  dependencies on jython (Python for a JVM) and ironpython (Python for Mono)
  may be added.
  .
@@ -121,9 +121,9 @@ Description: package depending on all supported Python runtime versions
 
 Package: python-all-dev
 Architecture: all
-Depends: ${misc:Depends}, python (= ${binary:Version}), python-all (= ${binary:Version}), python-dev (= ${binary:Version}), python2.5-dev (>= 2.5.5-6), python2.6-dev (>= 2.6.5-2), python2.7-dev (>= 2.7-7)
+Depends: ${misc:Depends}, python (= ${binary:Version}), python-all (= ${binary:Version}), python-dev (= ${binary:Version}), python2.6-dev (>= 2.6.5-2), python2.7-dev (>= 2.7-7)
 Description: package depending on all supported Python development packages
- The package currently depends on python2.5-dev, python2.6-dev and python2.7-dev, in the
+ The package currently depends on python2.6-dev and python2.7-dev, in the
  future, dependencies on jython (Python for a JVM) and ironpython (Python
  for Mono) may be added.
  .
@@ -134,9 +134,9 @@ Package: python-all-dbg
 Architecture: all
 Section: debug
 Priority: extra
-Depends: ${misc:Depends}, python (= ${binary:Version}), python-all (= ${binary:Version}), python-dbg (= ${binary:Version}), python2.5-dbg (>= 2.5.5-6), python2.6-dbg (>= 2.6.5-2), python2.7-dbg (>= 2.7-7)
+Depends: ${misc:Depends}, python (= ${binary:Version}), python-all (= ${binary:Version}), python-dbg (= ${binary:Version}), python2.6-dbg (>= 2.6.5-2), python2.7-dbg (>= 2.7-7)
 Description: package depending on all supported Python debugging packages
- The package currently depends on python2.5-dbg, python2.6-dbg and python2.7-dbg, in the
+ The package currently depends on python2.6-dbg and python2.7-dbg, in the
  future, dependencies on jython (Python for a JVM) and ironpython (Python
  for Mono) may be added.
  .
